2006-02-19 Perry
 PATCH: [ 1433931 ] Add comment before isBin checks in DirView
  Src: DirView.cpp
 PATCH: [ 1424153 ] Remove VTS_PUI1 from lwdisp.h
 BUG: [ 1395475 ] VTS_UI1 & VTSPUI1 macro redefinition warnings (VS.NET)
  Src\Common: lwdisp.h
 PATCH: [ 1433927 ] Fix external editor default and messages
 BUG: [ 1433774 ] default editor is blank
  Src: MainFrm.cpp Merge.cpp Merge.rc OptionsInit.cpp resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1433353 ] Fix menu resources
  Src: MainFrm.cpp Merge.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-02-19 Christian
 PATCH: [ 1429125 ] Return number of diffs instead of true/false
  Src: MergeDoc.cpp

2006-02-17 Perry
 BUG: [ 1395483 ] Signed/unsigned mismatch warning from LocationView.cpp
  Src: LocationView.cpp

2006-02-16 Perry
 BUG: [ 1395475 ] VTS_UI1 & VTSPUI1 macro redefinition warnings (VS.NET)
  Fixed VTS_PUI1 (which previous patch for this bug missed).
  Src\Common: lwdisp.h

2006-02-16 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Improve folder compare columns dialog (idea for new arrows from Catalan translation)
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-02-16 Perry
 PATCH: [ 1431771 ] Alter CheckTranslations.vbs to YesNoCancel
  Src/Languages: CheckTranslations.vbs
 PATCH: [ 1419582 ] Polish translation update for latest v2.5
  Contributed by dr_prozac
  Src/Languages/Polish: MergePolish.rc
 PATCH: [ 1431846 ] Update Czech Translation
  Contributed by Jan Hryz
  Src/Languages/Czech: MergeCzech.rc
  ShellExtension/Languages/ShellExtensionCzech.rc
 A few control adjustments matching Czech to English (many left)
  Src/Languages/Czech: MergeCzech.rc

2006-02-15 Perry
 PATCH: [ 1431636 ] IgnoreEOL broken in cvs trunk
  Src: PropCompare.cpp

2006-02-15 Kimmo
 PATCH: [ 1431768 ] Write paths to patch files as given
  Src: DiffWrapper.cpp

2006-02-14 Perry
 PATCH: [ 1431205 ] Fix ViewWhitespace \r\n bug
 BUG: [ 1431012 ] View line differences adds additional EOL char