@@ -1,3 +1,8 @@
+2006-02-20 Kimmo
+ PATCH: [ 1178743 ] Disable lang menu if no additional langs installed
+  Src: Merge.cpp Merge.h
+  Src/Common: LanguageSelect.cpp LanguageSelect.h
+
 2006-02-19 Perry
  PATCH: [ 1433931 ] Add comment before isBin checks in DirView
   Src: DirView.cpp
